[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "openenv-code-reviewer"
version = "1.0.0"
description = "OpenEnv environment for training AI agents to perform code review tasks"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Kamlesh Patil" }
]
keywords = [
    "openenv",
    "reinforcement-learning",
    "code-review",
    "ai-training",
    "software-engineering"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "websockets>=12.0",
    "httpx>=0.25.0",
    "python-multipart>=0.0.6",
    "openai>=1.6.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/openenv/code-reviewer"
Documentation = "https://github.com/openenv/code-reviewer#readme"
Repository = "https://github.com/openenv/code-reviewer"
Issues = "https://github.com/openenv/code-reviewer/issues"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.sdist]
include = [
    "/server",
    "/models.py",
    "/client.py",
    "/tasks.py",
    "/environment.py",
    "/inference.py",
    "/openenv.yaml",
    "/README.md",
    "/LICENSE",
]
